equ and nEqu should also work with pointers

--- a/bytecode.html
+++ b/bytecode.html
@@ -881,8 +881,8 @@ pre.code {
             <ul>
                 <li><span class="code">equ</span> opcode = <span class="code">0x0800</span></li>
                 <li><span class="code">dest</span> = Destination for the result (number)</li>
-                <li><span class="code">value1</span> = First operand (number)</li>
-                <li><span class="code">value2</span> = Second operand (number)</li>
+                <li><span class="code">value1</span> = First operand (number or pointer)</li>
+                <li><span class="code">value2</span> = Second operand (number or pointer)</li>
             </ul>
         </div>
         <p><span class="code">nEqu dest, value1, value2</span></p>
@@ -891,8 +891,8 @@ pre.code {
             <ul>
                 <li><span class="code">nEqu</span> opcode = <span class="code">0x0801</span></li>
                 <li><span class="code">dest</span> = Destination for the result (number)</li>
-                <li><span class="code">value1</span> = First operand (number)</li>
-                <li><span class="code">value2</span> = Second operand (number)</li>
+                <li><span class="code">value1</span> = First operand (number or pointer)</li>
+                <li><span class="code">value2</span> = Second operand (number or pointer)</li>
             </ul>
         </div>
         <p><span class="code">gre dest, value1, value2</span></p>
